# ai-powered-stock-agent

./: .gitignore  API.sh  README.md  pyproject.toml  report.txt  requirements.txt
docs/: interface.md  optimization-plan.md  project-brief.md
scripts/: probe_miromind.py
src/stock_agent/: agent.py  cache.py  cli.py  compare.py  config.py  event_adapter.py  llm.py
src/stock_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/stock_agent/graphs/: __init__.py  deep_search_graph.py
src/stock_agent/tools/: __init__.py  content_fetch.py  market_data.py  web_search.py
src/stock_agent/web/: app.py  export.py  persistence.py  presentation.py  runs.py
src/stock_agent/web/static/: app.css  app.js
src/stock_agent/web/templates/: index.html
tests/: conftest.py  test_api_runs.py  test_cache.py  test_compare.py  test_content_fetch.py  test_deep_search_graph.py  test_event_adapter.py  test_export.py  test_market_data.py  test_new_features.py  test_persistence.py  test_run_store.py  test_sse_stream.py  test_verify.py  test_web_app.py  test_web_presentation.py
