[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-agent"
version = "0.1.0"
description = "LangGraph-based deep search agent for stock investment research"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "stock-agent" }]
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.0",
  "tavily-python>=0.3.0",
  "duckduckgo-search>=6.2.0",
  "yfinance>=0.2.36",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
stock-agent = "stock_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

