[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-agent"
version = "0.1.0"
description = "LangGraph-based deep search agent for stock investment research"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "stock-agent" }]
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.0",
  "tavily-python>=0.3.0",
  "duckduckgo-search>=6.2.0",
  "yfinance>=0.2.36",
  "rich>=13.7.0",
  "requests>=2.31.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "markdown>=3.7.0",
  "bleach>=6.2.0",
  "fpdf2>=2.7.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
stock-agent = "stock_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"stock_agent.web" = ["templates/*.html", "static/*.css", "static/*.js"]

